update styles in parlor theme

--- a/css-build/style.less
+++ b/css-build/style.less
@@ -2,6 +2,7 @@
 @import "imports/mixins";
 @import "imports/for";
 @import "imports/bootstrap-override";
+@import "imports/wordpress-override";
 @import "imports/retina-media-queries";
 @import "imports/globals";
 @import "imports/mobile_first";
