--- a/css-build/style.css
+++ b/css-build/style.css
@@ -28,3 +28,18 @@
 @media only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 1300px), only screen and (min--moz-device-pixel-ratio: 2) and (min-width: 1300px), only screen and (-o-min-device-pixel-ratio: 2/1) and (min-width: 1300px), only screen and (min-device-pixel-ratio: 2) and (min-width: 1300px), only screen and (min-resolution: 192dpi) and (min-width: 1300px), only screen and (min-resolution: 2dppx) and (min-width: 1300px) {
   /* Large screen, retina, stuff to override above media query */
 }
+@media (min-width: 992px) and (max-width: 1199px) {
+  .secondary-toggle {
+    display: none;
+  }
+}
+@media (min-width: 1200px) {
+  .secondary-toggle {
+    display: none;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .secondary-toggle {
+    display: none;
+  }
+}
