move twentyfifteen "Skip to content" style into parlor css

--- a/css-build/imports/wordpress-override.less
+++ b/css-build/imports/wordpress-override.less
@@ -1,4 +1,5 @@
 // Globally hide the WordPress site description
-.site-description {
+// Globally hide the "Skip to content" link
+.says, .screen-reader-text, .site-description {
 	.hideElement;
 }
