--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -1395,7 +1395,7 @@ td.visible-print,th.visible-print{display:table-cell!important}}
 @media print{.visible-print-inline{display:inline!important}}
 @media print{.visible-print-inline-block{display:inline-block!important}}
 @media print{.hidden-print{display:none!important}}
-.hideElement,.site-description{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
+.hideElement,.says,.screen-reader-text,.site-description{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
 @media (min-width:992px) and (max-width:1199px){.secondary-toggle{display:none}}
 @media (min-width:1200px){.secondary-toggle{display:none}}
 @media (min-width:768px) and (max-width:991px){.secondary-toggle{display:none}}
