--- a/css-build/wp-comment-block.css
+++ b/css-build/wp-comment-block.css
@@ -1,12 +1,12 @@
 /*!
  Theme Name:   Parlor Hair Studio
  Theme URI:    n/a
- Description:  Twenty Fifteen Child Theme
+ Description:  Twenty Thirteen Child Theme
  Author:       Parlor Hair Studio
  Author URI:   http://parlorhairstudio.com
- Template:     twentyfifteen
+Template: twentythirteen
  Version:      1.0.0
  License:      GNU General Public License v2 or later
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
- Text Domain:  twenty-fifteen-child
+ Text Domain:  twentythirteen
 */
