use twentythirteen as parent theme for parlor (see message) add twentythirteen back to the project because it's a better parent for the parlor theme due to its layout. Update core style.css to reflect that twnetythirteen is now the parent.

--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -1,4 +1,16 @@
 /*!
+ Theme Name:   Parlor Hair Studio
+ Theme URI:    n/a
+ Description:  Twenty Thirteen Child Theme
+ Author:       Parlor Hair Studio
+ Author URI:   http://parlorhairstudio.com
+Template: twentythirteen
+ Version:      1.0.0
+ License:      GNU General Public License v2 or later
+ License URI:  http://www.gnu.org/licenses/gpl-2.0.html
+ Text Domain:  twentythirteen
+*/
+/*!
  * Bootstrap v3.3.2 (http://getbootstrap.com)
  * Copyright 2011-2015 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
