update header-related styles

--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -1408,6 +1408,11 @@ td.visible-print,th.visible-print{display:table-cell!important}}
 @media print{.visible-print-inline-block{display:inline-block!important}}
 @media print{.hidden-print{display:none!important}}
 .hideElement,.says,.screen-reader-text,.site-description{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
+.site-title{text-align:left}
+.home-link{display:inline-block}
+.menu-item{list-style-type:none;text-align:left;display:inline-block}
 @media (min-width:992px) and (max-width:1199px){.menu-toggle{display:none}}
-@media (min-width:1200px){.menu-toggle{display:none}}
+@media (min-width:1200px){.menu-toggle{display:none}
+.page{width:auto;max-width:900px;text-align:center;margin:0 auto}
+.navbar{max-width:700px;display:inline-block}}
 @media (min-width:768px) and (max-width:991px){.menu-toggle{display:none}}
