--- a/css-build/imports/min-width-1200.less
+++ b/css-build/imports/min-width-1200.less
@@ -1,5 +1,20 @@
 @media (min-width: 1200px) {
+
+  // The menu
   .menu-toggle {
     display: none;
+  }
+
+  // The site's main containing element
+  .page {
+    width: auto;
+    max-width: 900px;
+    text-align: center;
+    margin: 0 auto;
+  }
+
+  .navbar {
+    max-width:700px;
+    display: inline-block;
   }
 }
