--- a/css-build/style.css
+++ b/css-build/style.css
@@ -30,6 +30,17 @@
 @media only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 1300px), only screen and (min--moz-device-pixel-ratio: 2) and (min-width: 1300px), only screen and (-o-min-device-pixel-ratio: 2/1) and (min-width: 1300px), only screen and (min-device-pixel-ratio: 2) and (min-width: 1300px), only screen and (min-resolution: 192dpi) and (min-width: 1300px), only screen and (min-resolution: 2dppx) and (min-width: 1300px) {
   /* Large screen, retina, stuff to override above media query */
 }
+.site-title {
+  text-align: left;
+}
+.home-link {
+  display: inline-block;
+}
+.menu-item {
+  list-style-type: none;
+  text-align: left;
+  display: inline-block;
+}
 @media (min-width: 992px) and (max-width: 1199px) {
   .menu-toggle {
     display: none;
@@ -38,6 +49,16 @@
 @media (min-width: 1200px) {
   .menu-toggle {
     display: none;
+  }
+  .page {
+    width: auto;
+    max-width: 900px;
+    text-align: center;
+    margin: 0 auto;
+  }
+  .navbar {
+    max-width: 700px;
+    display: inline-block;
   }
 }
 @media (min-width: 768px) and (max-width: 991px) {
