--- a/css-build/imports/retina-media-queries.less
+++ b/css-build/imports/retina-media-queries.less
@@ -7,12 +7,28 @@ only screen and (                min-resolution: 192dpi) and (min-width: 320px),
 only screen and (                min-resolution: 2dppx)  and (min-width: 320px) {
 
   /* Small screen, retina, stuff to override above media query */
+    .site-title {
+      background: url(/wp-content/themes/parlor/images/logo@2x.png) no-repeat;
+      text-indent: -999px;
+      background-size: 270px 56px;
+      width: 270px;
+      height: 56px;
+
+    }
 
 }
 
 @media only screen and (min-width: 768px) {
 
   /* Medium screen, non-retina */
+  .site-title {
+    background: url(/wp-content/themes/parlor/images/logo.png) no-repeat;
+    text-indent: -999px;
+    background-size: 270px 56px;
+    width: 270px;
+    height: 56px;
+
+  }
 
 }
 
@@ -25,12 +41,28 @@ only screen and (                min-resolution: 192dpi) and (min-width: 768px),
 only screen and (                min-resolution: 2dppx)  and (min-width: 768px) {
 
   // Medium screen, retina, stuff to override above media query
+  .site-title {
+    background: url(/wp-content/themes/parlor/images/logo@2x.png) no-repeat;
+    text-indent: -999px;
+    background-size: 270px 56px;
+    width: 270px;
+    height: 56px;
+
+  }
 
 }
 
 @media only screen and (min-width: 1300px) {
 
   /* Large screen, non-retina */
+  .site-title {
+    background: url(/wp-content/themes/parlor/images/logo.png) no-repeat;
+    text-indent: -999px;
+    background-size: 270px 56px;
+    width: 270px;
+    height: 56px;
+
+  }
 
 }
 
@@ -43,5 +75,12 @@ only screen and (                min-resolution: 192dpi) and (min-width: 1300px)
 only screen and (                min-resolution: 2dppx)  and (min-width: 1300px) {
 
   /* Large screen, retina, stuff to override above media query */
+  .site-title {
+    background: url(/wp-content/themes/parlor/images/logo@2x.png) no-repeat;
+    text-indent: -999px;
+    background-size: 270px 56px;
+    width: 270px;
+    height: 56px;
 
+  }
 }
