--- a/css-build/style.css
+++ b/css-build/style.css
@@ -20,15 +20,52 @@
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 320px), only screen and (min--moz-device-pixel-ratio: 2) and (min-width: 320px), only screen and (-o-min-device-pixel-ratio: 2/1) and (min-width: 320px), only screen and (min-device-pixel-ratio: 2) and (min-width: 320px), only screen and (min-resolution: 192dpi) and (min-width: 320px), only screen and (min-resolution: 2dppx) and (min-width: 320px) {
   /* Small screen, retina, stuff to override above media query */
+  .site-title {
+    background: url(/wp-content/themes/parlor/images/logo@2x.png) no-repeat;
+    text-indent: -999px;
+    background-size: 270px 56px;
+    width: 270px;
+    height: 56px;
+  }
 }
 @media only screen and (min-width: 768px) {
   /* Medium screen, non-retina */
+  .site-title {
+    background: url(/wp-content/themes/parlor/images/logo.png) no-repeat;
+    text-indent: -999px;
+    background-size: 270px 56px;
+    width: 270px;
+    height: 56px;
+  }
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 768px), only screen and (min--moz-device-pixel-ratio: 2) and (min-width: 768px), only screen and (-o-min-device-pixel-ratio: 2/1) and (min-width: 768px), only screen and (min-device-pixel-ratio: 2) and (min-width: 768px), only screen and (min-resolution: 192dpi) and (min-width: 768px), only screen and (min-resolution: 2dppx) and (min-width: 768px) {
+  .site-title {
+    background: url(/wp-content/themes/parlor/images/logo@2x.png) no-repeat;
+    text-indent: -999px;
+    background-size: 270px 56px;
+    width: 270px;
+    height: 56px;
+  }
 }
 @media only screen and (min-width: 1300px) {
   /* Large screen, non-retina */
+  .site-title {
+    background: url(/wp-content/themes/parlor/images/logo.png) no-repeat;
+    text-indent: -999px;
+    background-size: 270px 56px;
+    width: 270px;
+    height: 56px;
+  }
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 1300px), only screen and (min--moz-device-pixel-ratio: 2) and (min-width: 1300px), only screen and (-o-min-device-pixel-ratio: 2/1) and (min-width: 1300px), only screen and (min-device-pixel-ratio: 2) and (min-width: 1300px), only screen and (min-resolution: 192dpi) and (min-width: 1300px), only screen and (min-resolution: 2dppx) and (min-width: 1300px) {
   /* Large screen, retina, stuff to override above media query */
+  .site-title {
+    background: url(/wp-content/themes/parlor/images/logo@2x.png) no-repeat;
+    text-indent: -999px;
+    background-size: 270px 56px;
+    width: 270px;
+    height: 56px;
+  }
 }
 .site-title {
   text-align: left;
@@ -53,7 +90,6 @@
   .page {
     width: auto;
     max-width: 900px;
-    text-align: center;
     margin: 0 auto;
   }
   .navbar {
