move non-image values to the .logo() mixin

--- a/css-build/imports/mixins.less
+++ b/css-build/imports/mixins.less
@@ -1,3 +1,18 @@
+// Logo mixin...this the only image on the site
+.logo {
+  text-indent: -999px;
+  background-size: 270px 56px;
+  width: 270px;
+  height: 56px;
+}
+
+
+
+
+/*
+ * HELPER CLASSES
+ */
+
 // Use the old school Yahoo trick for hiding page elements
 // Read more at: http://yhoo.it/1vz3NVW
 .hideElement {
