--- a/css-build/imports/retina-media-queries.less
+++ b/css-build/imports/retina-media-queries.less
@@ -23,11 +23,7 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 320px) 
   /* Medium screen, non-retina */
   .site-title {
     background: url(/wp-content/themes/parlor/images/logo.png) no-repeat;
-    text-indent: -999px;
-    background-size: 270px 56px;
-    width: 270px;
-    height: 56px;
-
+    .logo();
   }
 
 }
@@ -43,11 +39,7 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 768px) 
   // Medium screen, retina, stuff to override above media query
   .site-title {
     background: url(/wp-content/themes/parlor/images/logo@2x.png) no-repeat;
-    text-indent: -999px;
-    background-size: 270px 56px;
-    width: 270px;
-    height: 56px;
-
+    .logo();
   }
 
 }
@@ -57,11 +49,7 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 768px) 
   /* Large screen, non-retina */
   .site-title {
     background: url(/wp-content/themes/parlor/images/logo.png) no-repeat;
-    text-indent: -999px;
-    background-size: 270px 56px;
-    width: 270px;
-    height: 56px;
-
+    .logo();
   }
 
 }
@@ -77,10 +65,6 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 1300px)
   /* Large screen, retina, stuff to override above media query */
   .site-title {
     background: url(/wp-content/themes/parlor/images/logo@2x.png) no-repeat;
-    text-indent: -999px;
-    background-size: 270px 56px;
-    width: 270px;
-    height: 56px;
-
+    .logo();
   }
 }
