--- a/css-build/style.css
+++ b/css-build/style.css
@@ -1,3 +1,12 @@
+.logo {
+  text-indent: -999px;
+  background-size: 270px 56px;
+  width: 270px;
+  height: 56px;
+}
+/*
+ * HELPER CLASSES
+ */
 .hideElement {
   position: absolute !important;
   clip: rect(1px 1px 1px 1px);
