add blue nav bullets to the project, style them to the nav

--- a/css-build/imports/retina-media-queries.less
+++ b/css-build/imports/retina-media-queries.less
@@ -7,14 +7,17 @@ only screen and (                min-resolution: 192dpi) and (min-width: 320px),
 only screen and (                min-resolution: 2dppx)  and (min-width: 320px) {
 
   /* Small screen, retina, stuff to override above media query */
-    .site-title {
-      background: url(/wp-content/themes/parlor/images/logo@2x.png) no-repeat;
-      text-indent: -999px;
-      background-size: 270px 56px;
-      width: 270px;
-      height: 56px;
+  .site-title {
+    background: url(/wp-content/themes/parlor/images/logo@2x.png) no-repeat;
+    text-indent: -999px;
+    background-size: 270px 56px;
+    width: 270px;
+    height: 56px;
+  }
 
-    }
+  .menu-item::before {
+    content:url(/wp-content/themes/parlor/images/nav-bullet@2x.png)
+  }
 
 }
 
@@ -25,6 +28,10 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 320px) 
     background: url(/wp-content/themes/parlor/images/logo.png) no-repeat;
     .logo();
   }
+
+    .menu-item::before {
+      content:url(/wp-content/themes/parlor/images/nav-bullet.png)
+    }
 
 }
 
@@ -42,6 +49,10 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 768px) 
     .logo();
   }
 
+  .menu-item::before {
+    content:url(/wp-content/themes/parlor/images/nav-bullet@2x.png)
+  }
+
 }
 
 @media only screen and (min-width: 1300px) {
@@ -50,6 +61,10 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 768px) 
   .site-title {
     background: url(/wp-content/themes/parlor/images/logo.png) no-repeat;
     .logo();
+  }
+
+  .menu-item::before {
+    content:url(/wp-content/themes/parlor/images/nav-bullet.png)
   }
 
 }
@@ -67,4 +82,9 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 1300px)
     background: url(/wp-content/themes/parlor/images/logo@2x.png) no-repeat;
     .logo();
   }
+
+  .menu-item::before {
+    content:url(/wp-content/themes/parlor/images/nav-bullet@2x.png)
+  }
+
 }
