--- a/css-build/style.css
+++ b/css-build/style.css
@@ -36,6 +36,9 @@
     width: 270px;
     height: 56px;
   }
+  .menu-item::before {
+    content: url(/wp-content/themes/parlor/images/nav-bullet@2x.png);
+  }
 }
 @media only screen and (min-width: 768px) {
   /* Medium screen, non-retina */
@@ -46,6 +49,9 @@
     width: 270px;
     height: 56px;
   }
+  .menu-item::before {
+    content: url(/wp-content/themes/parlor/images/nav-bullet.png);
+  }
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 768px), only screen and (min--moz-device-pixel-ratio: 2) and (min-width: 768px), only screen and (-o-min-device-pixel-ratio: 2/1) and (min-width: 768px), only screen and (min-device-pixel-ratio: 2) and (min-width: 768px), only screen and (min-resolution: 192dpi) and (min-width: 768px), only screen and (min-resolution: 2dppx) and (min-width: 768px) {
   .site-title {
@@ -54,6 +60,9 @@
     background-size: 270px 56px;
     width: 270px;
     height: 56px;
+  }
+  .menu-item::before {
+    content: url(/wp-content/themes/parlor/images/nav-bullet@2x.png);
   }
 }
 @media only screen and (min-width: 1300px) {
@@ -65,6 +74,9 @@
     width: 270px;
     height: 56px;
   }
+  .menu-item::before {
+    content: url(/wp-content/themes/parlor/images/nav-bullet.png);
+  }
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 1300px), only screen and (min--moz-device-pixel-ratio: 2) and (min-width: 1300px), only screen and (-o-min-device-pixel-ratio: 2/1) and (min-width: 1300px), only screen and (min-device-pixel-ratio: 2) and (min-width: 1300px), only screen and (min-resolution: 192dpi) and (min-width: 1300px), only screen and (min-resolution: 2dppx) and (min-width: 1300px) {
   /* Large screen, retina, stuff to override above media query */
@@ -74,6 +86,9 @@
     background-size: 270px 56px;
     width: 270px;
     height: 56px;
+  }
+  .menu-item::before {
+    content: url(/wp-content/themes/parlor/images/nav-bullet@2x.png);
   }
 }
 .site-title {
