--- a/css-build/imports/globals.less
+++ b/css-build/imports/globals.less
@@ -13,4 +13,10 @@
 	list-style-type: none;
 	text-align: left;
 	display: inline-block;
+	margin-right: 12px;
+}
+
+// Reduce left padding in the main nav
+.nav-menu {
+	padding-left:11px;
 }
