--- a/css-build/imports/retina-media-queries.less
+++ b/css-build/imports/retina-media-queries.less
@@ -16,7 +16,8 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 320px) 
   }
 
   .menu-item::before {
-    content:url(/wp-content/themes/parlor/images/nav-bullet@2x.png)
+    content:url(/wp-content/themes/parlor/images/nav-bullet@2x.png);
+    margin-right:5px;
   }
 
 }
@@ -29,9 +30,10 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 320px) 
     .logo();
   }
 
-    .menu-item::before {
-      content:url(/wp-content/themes/parlor/images/nav-bullet.png)
-    }
+  .menu-item::before {
+    content:url(/wp-content/themes/parlor/images/nav-bullet.png);
+    margin-right:5px;
+  }
 
 }
 
@@ -50,7 +52,8 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 768px) 
   }
 
   .menu-item::before {
-    content:url(/wp-content/themes/parlor/images/nav-bullet@2x.png)
+    content:url(/wp-content/themes/parlor/images/nav-bullet@2x.png);
+    margin-right:5px;
   }
 
 }
@@ -64,7 +67,8 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 768px) 
   }
 
   .menu-item::before {
-    content:url(/wp-content/themes/parlor/images/nav-bullet.png)
+    content:url(/wp-content/themes/parlor/images/nav-bullet.png);
+    margin-right:5px;
   }
 
 }
@@ -84,7 +88,8 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 1300px)
   }
 
   .menu-item::before {
-    content:url(/wp-content/themes/parlor/images/nav-bullet@2x.png)
+    content:url(/wp-content/themes/parlor/images/nav-bullet@2x.png);
+    margin-right:5px;
   }
 
 }
