override bootstrap link color

--- a/css-build/imports/bootstrap-override.less
+++ b/css-build/imports/bootstrap-override.less
@@ -4,3 +4,13 @@
  * Styles that override core Bootstrap CSS go here. Place them below
  * core Bootstrap styles and above custom styles inthe build.
  */
+
+
+// Override Bootstrap's blue link color
+a {
+  color: @link-color;
+}
+
+a:focus,a:hover{
+  color: @link-color;
+}
