--- a/css-build/imports/min-width-1200.less
+++ b/css-build/imports/min-width-1200.less
@@ -1,5 +1,29 @@
 @media (min-width: 1200px) {
 
+  // Style the contact info bar at the top of every page
+  .contact-information {
+    background-color: #363030;
+    color: rgba(255, 255, 255, 1);
+    text-align: center;
+  }
+
+  .contact-information-inner {
+    max-width: 900px;
+    margin: 0 auto;
+  }
+
+  // Style all <span> tags in the ".contact-information" element
+  .contact-information-element {
+    display: inline-block;
+  }
+
+  .phone-number {
+    float: left;
+  }
+
+  .hours {
+    float: right;
+  }
   // The menu
   .menu-toggle {
     display: none;
@@ -8,6 +32,11 @@
   // The site's main containing element
   .page {
     width: auto;
+    margin: 0 auto;
+  }
+
+  // Center all the elements in the site's main content element
+  .site {
     max-width: 900px;
     margin: 0 auto;
   }
