--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -1426,7 +1426,13 @@ a,a:focus,a:hover{color:#696767}
 .menu-item{list-style-type:none;display:inline-block;margin-right:15px;text-align:left}
 .nav-menu{padding-left:11px}
 @media (min-width:992px) and (max-width:1199px){.menu-toggle{display:none}}
-@media (min-width:1200px){.menu-toggle{display:none}
-.page{width:auto;max-width:900px;margin:0 auto}
+@media (min-width:1200px){.contact-information{background-color:#363030;color:#fff;text-align:center}
+.contact-information-inner{max-width:900px;margin:0 auto}
+.contact-information-element{display:inline-block}
+.phone-number{float:left}
+.hours{float:right}
+.menu-toggle{display:none}
+.page{width:auto;margin:0 auto}
+.site{max-width:900px;margin:0 auto}
 .navbar{max-width:700px;display:inline-block}}
 @media (min-width:768px) and (max-width:991px){.menu-toggle{display:none}}
