--- a/css-build/style.css
+++ b/css-build/style.css
@@ -156,6 +156,8 @@ a:hover {
   .navbar {
     max-width: 700px;
     display: inline-block;
+    position: relative;
+    left: 47px;
   }
 }
 @media (min-width: 768px) and (max-width: 991px) {
