--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -1434,5 +1434,5 @@ a,a:focus,a:hover{color:#696767}
 .menu-toggle{display:none}
 .page{width:auto;margin:0 auto}
 .site{max-width:900px;margin:0 auto}
-.navbar{max-width:700px;display:inline-block}}
+.navbar{max-width:700px;display:inline-block;position:relative;left:47px}}
 @media (min-width:768px) and (max-width:991px){.menu-toggle{display:none}}
