update/apply the ".hide-element" LESS mixin

--- a/css-build/imports/wordpress-override.less
+++ b/css-build/imports/wordpress-override.less
@@ -1,5 +1,5 @@
 // Globally hide the WordPress site description
 // Globally hide the "Skip to content" link
 .says, .screen-reader-text, .site-description {
-	.hideElement;
+	.hide-element();
 }
