--- a/css-build/imports/mixins.less
+++ b/css-build/imports/mixins.less
@@ -15,7 +15,7 @@
 
 // Use the old school Yahoo trick for hiding page elements
 // Read more at: http://yhoo.it/1vz3NVW
-.hideElement {
+.hide-element {
   position: absolute !important;
   clip: rect(1px 1px 1px 1px);
   /* IE6, IE7 */
