--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -1425,13 +1425,13 @@ a,a:focus,a:hover{color:#696767}
 .home-link{display:inline-block}
 .menu-item{list-style-type:none;display:inline-block;margin-right:15px;text-align:left}
 .nav-menu{padding-left:11px}
-@media (min-width:992px) and (max-width:1199px){.menu-toggle{display:none}}
-@media (min-width:1200px){.contact-information{background-color:#363030;color:#fff;text-align:center}
+@media (min-width:768px){.contact-information{background-color:#363030;color:#fff;text-align:center;padding:2px 0}
 .contact-information-inner{max-width:900px;margin:0 auto}
 .contact-information-element{display:inline-block}
 .phone-number{float:left}
-.hours{float:right}
-.menu-toggle{display:none}
+.hours{float:right}}
+@media (min-width:992px) and (max-width:1199px){.menu-toggle{display:none}}
+@media (min-width:1200px){.menu-toggle{display:none}
 .page{width:auto;margin:0 auto}
 .site{max-width:900px;margin:0 auto}
 .navbar{max-width:700px;display:inline-block;position:relative;left:47px}}
