style the footer

--- a/css-build/imports/globals.less
+++ b/css-build/imports/globals.less
@@ -1,3 +1,9 @@
+html, body, .site, .site-main {
+	height: 100%;
+	min-height:100%;
+}
+
+
 // Move the main h1/logo to the left
 .site-title {
 	text-align: left;
@@ -20,4 +26,10 @@
 // Reduce left padding in the main nav
 .nav-menu {
 	padding-left:11px;
+}
+
+
+.site-footer {
+  height: 20px;
+	background-color: red;
 }
