--- a/css-build/imports/min-width-1200.less
+++ b/css-build/imports/min-width-1200.less
@@ -13,8 +13,18 @@
 
   // Center all the elements in the site's main content element
   .site {
+    margin: 0 auto;
+  }
+
+  .site-header {
     max-width: 900px;
     margin: 0 auto;
+  }
+
+  .site-footer {
+    background: rgba(171, 171, 171, 1);
+    color: rgba(54, 48, 48, 1);
+    height: 30px;
   }
 
   .navbar {
