--- a/css-build/imports/min-width-768.less
+++ b/css-build/imports/min-width-768.less
@@ -1,27 +1,27 @@
 @media (min-width: 768px) {
-    // Style the contact info bar at the top of every page
-	  .contact-information {
-	    background-color: #363030;
-	    color: rgba(255, 255, 255, 1);
-	    text-align: center;
-			padding:2px 0;
-	  }
+	// Style the contact info bar at the top of every page
+	.contact-information {
+		background-color: #363030;
+		color: rgba(255, 255, 255, 1);
+		text-align: center;
+		padding:2px 0;
+	}
 
-	  .contact-information-inner {
-	    max-width: 900px;
-	    margin: 0 auto;
-	  }
+	.contact-information-inner, .site-footer-inner {
+		max-width: 900px;
+		margin: 0 auto;
+	}
 
-	  // Style all <span> tags in the ".contact-information" element
-	  .contact-information-element {
-	    display: inline-block;
-	  }
+	// Style all <span> tags in the ".contact-information" element
+	.contact-information-element {
+		display: inline-block;
+	}
 
-	  .phone-number {
-	    float: left;
-	  }
+	.phone-number {
+		float: left;
+	}
 
-	  .hours {
-	    float: right;
-	  }
+	.hours {
+		float: right;
+	}
 }
