add non-visible title to <nav>

--- a/css-build/imports/globals.less
+++ b/css-build/imports/globals.less
@@ -34,6 +34,11 @@ html, body, .site, .site-main {
 	padding-left:11px;
 }
 
+// Hide the menu header tag
+.main-navigation-header {
+	.hide-element();
+}
+
 .nav-menu li {
 	display: inline-block;
 	position: relative;
