--- a/css-build/imports/min-width-1200.less
+++ b/css-build/imports/min-width-1200.less
@@ -11,14 +11,9 @@
     margin: 0 auto;
   }
 
-  // Center all the elements in the site's main content element
-  .site {
-    margin: 0 auto;
-  }
-
+   // Limit the header's width to 900px
   .site-header {
     max-width: 900px;
-    margin: 0 auto;
   }
 
   .site-footer {
