--- a/css-build/imports/min-width-768.less
+++ b/css-build/imports/min-width-768.less
@@ -1,4 +1,11 @@
 @media (min-width: 768px) {
+
+
+
+	.menu-toggle {
+	  display: none;
+	}
+
 	// Style the contact info bar at the top of every page
 	.contact-information {
 		background-color: #363030;
@@ -23,5 +30,11 @@
 
 	.hours {
 		float: right;
+	}
+
+	.navbar {
+		max-width: 600px;
+	  display: inline-block;
+	  left: 47px;
 	}
 }
