--- a/css-build/imports/min-width-768-max-width-991.less
+++ b/css-build/imports/min-width-768-max-width-991.less
@@ -1,5 +1,16 @@
 @media (min-width: 768px) and (max-width: 991px) {
-.menu-toggle {
-	  display: none;
+	.menu-toggle {
+		display: none;
 	}
+
+	// Center all the elements in the site's main content element
+	.site {
+		margin: 0 auto;
+	}				
+
+	.navbar {
+		max-width: 600px;
+		left: 0;
+	}
+
 }
