--- a/css-build/imports/retina-media-queries.less
+++ b/css-build/imports/retina-media-queries.less
@@ -10,9 +10,9 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 320px) 
   .site-title {
     background: url(/wp-content/themes/parlor/images/logo@2x.png) no-repeat;
     text-indent: -999px;
-    background-size: 270px 56px;
-    width: 270px;
-    height: 56px;
+    background-size: 210px 48px;
+    width: 210px;
+    height: 48px;
   }
 
   .menu-item::before {
@@ -62,8 +62,10 @@ only screen and (                min-resolution: 2dppx)  and (min-width: 768px) 
 
   /* Large screen, non-retina */
   .site-title {
-    background: url(/wp-content/themes/parlor/images/logo.png) no-repeat;
+    background: url(/wp-content/themes/parlor/images/logo.png) no-repeat 10px -64px;;
     .logo();
+    width: 210px;
+    height: 48px;
   }
 
   .menu-item::before {
