--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -1407,49 +1407,55 @@ td.visible-print,th.visible-print{display:table-cell!important}}
 @media print{.visible-print-inline{display:inline!important}}
 @media print{.visible-print-inline-block{display:inline-block!important}}
 @media print{.hidden-print{display:none!important}}
-.logo{text-indent:-999px;background-size:270px 56px;width:270px;height:56px}
+.logo{text-indent:-999px;background-size:210px 48px}
 .hide-element{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
 a,a:focus,a:hover{color:#696767}
 .says,.screen-reader-text,.site-description{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
-@media only screen and (-webkit-min-device-pixel-ratio:2) and (min-width:320px),only screen and (min-device-pixel-ratio:2) and (min-width:320px),only screen and (min-resolution:192dpi) and (min-width:320px),only screen and (min-resolution:2dppx) and (min-width:320px){.site-title{background:url(/wp-content/themes/parlor/images/logo@2x.png) no-repeat;text-indent:-999px;background-size:270px 56px;width:270px;height:56px}
+@media only screen and (-webkit-min-device-pixel-ratio:2) and (min-width:320px),only screen and (min-device-pixel-ratio:2) and (min-width:320px),only screen and (min-resolution:192dpi) and (min-width:320px),only screen and (min-resolution:2dppx) and (min-width:320px){.site-title{background:url(/wp-content/themes/parlor/images/logo@2x.png) no-repeat;text-indent:-999px;background-size:210px 48px;width:210px;height:48px}
 .menu-item::before{content:url(/wp-content/themes/parlor/images/nav-bullet@2x.png);margin-right:5px}}
-@media only screen and (min-width:768px){.site-title{background:url(/wp-content/themes/parlor/images/logo.png) no-repeat;text-indent:-999px;background-size:270px 56px;width:270px;height:56px}
+@media only screen and (min-width:768px){.site-title{background:url(/wp-content/themes/parlor/images/logo.png) no-repeat;text-indent:-999px;background-size:210px 48px}
 .menu-item::before{content:url(/wp-content/themes/parlor/images/nav-bullet.png);margin-right:5px}}
-@media only screen and (-webkit-min-device-pixel-ratio:2) and (min-width:768px),only screen and (min-device-pixel-ratio:2) and (min-width:768px),only screen and (min-resolution:192dpi) and (min-width:768px),only screen and (min-resolution:2dppx) and (min-width:768px){.site-title{background:url(/wp-content/themes/parlor/images/logo@2x.png) no-repeat;text-indent:-999px;background-size:270px 56px;width:270px;height:56px}
+@media only screen and (-webkit-min-device-pixel-ratio:2) and (min-width:768px),only screen and (min-device-pixel-ratio:2) and (min-width:768px),only screen and (min-resolution:192dpi) and (min-width:768px),only screen and (min-resolution:2dppx) and (min-width:768px){.site-title{background:url(/wp-content/themes/parlor/images/logo@2x.png) no-repeat;text-indent:-999px;background-size:210px 48px}
 .menu-item::before{content:url(/wp-content/themes/parlor/images/nav-bullet@2x.png);margin-right:5px}}
-@media only screen and (min-width:1300px){.site-title{background:url(/wp-content/themes/parlor/images/logo.png) no-repeat;text-indent:-999px;background-size:270px 56px;width:270px;height:56px}
+@media only screen and (min-width:1300px){.site-title{background:url(/wp-content/themes/parlor/images/logo.png) 10px -64px no-repeat;text-indent:-999px;background-size:210px 48px;width:210px;height:48px}
 .menu-item::before{content:url(/wp-content/themes/parlor/images/nav-bullet.png);margin-right:5px}}
-@media only screen and (-webkit-min-device-pixel-ratio:2) and (min-width:1300px),only screen and (min-device-pixel-ratio:2) and (min-width:1300px),only screen and (min-resolution:192dpi) and (min-width:1300px),only screen and (min-resolution:2dppx) and (min-width:1300px){.site-title{background:url(/wp-content/themes/parlor/images/logo@2x.png) no-repeat;text-indent:-999px;background-size:270px 56px;width:270px;height:56px}
+@media only screen and (-webkit-min-device-pixel-ratio:2) and (min-width:1300px),only screen and (min-device-pixel-ratio:2) and (min-width:1300px),only screen and (min-resolution:192dpi) and (min-width:1300px),only screen and (min-resolution:2dppx) and (min-width:1300px){.site-title{background:url(/wp-content/themes/parlor/images/logo@2x.png) no-repeat;text-indent:-999px;background-size:210px 48px}
 .menu-item::before{content:url(/wp-content/themes/parlor/images/nav-bullet@2x.png);margin-right:5px}}
 .site,.site-main,body,html{height:100%;min-height:100%}
 .site-title{text-align:left}
+.site-header{margin:0 auto}
 .site-footer{height:20px;background-color:#ababab}
 .home-link{display:inline-block}
 .menu-item{list-style-type:none;margin-right:7px;text-align:left}
 .nav-menu{padding-left:11px}
 .main-navigation-header{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
-.main-navigation{clear:both;margin:0 auto;max-width:1080px;min-height:45px;position:relative}
+.main-navigation{clear:both;margin:0 auto;max-width:1080px;position:relative}
 div.nav-menu>ul,ul.nav-menu{margin:0}
 .nav-menu li{display:inline-block;position:relative}
 .nav-menu li a:focus,.nav-menu li a:hover,.nav-menu li:focus>a,.nav-menu li:hover>a{background-color:#220e10;color:#fff}
-.nav-menu .children,.nav-menu .sub-menu{background-color:#220e10;border:2px solid #f7f5e7;border-top:0;padding:0;position:absolute;left:-2px;z-index:99999;height:1px;width:1px;overflow:hidden;clip:rect(1px,1px,1px,1px)}
+.nav-menu .children,.nav-menu .sub-menu{background-color:#220e10;border-top:0;padding:0;position:absolute;left:-2px;z-index:99999;height:1px;width:1px;overflow:hidden;clip:rect(1px,1px,1px,1px)}
 .nav-menu .children ul,.nav-menu .sub-menu ul{border-left:0;left:100%;top:0}
 .nav-menu ul ul a,ul.nav-menu ul a{color:#fff;margin:0;width:200px}
 .nav-menu ul ul a:focus,.nav-menu ul ul a:hover,ul.nav-menu ul a:focus,ul.nav-menu ul a:hover{background-color:#db572f}
 .nav-menu .focus>ul,.nav-menu ul li:hover>ul,ul.nav-menu .focus>ul,ul.nav-menu li:hover>ul{clip:inherit;overflow:inherit;height:inherit;width:inherit}
-@media (min-width:768px){.contact-information{background-color:#363030;color:#fff;text-align:center;padding:2px 0}
+.sub-menu li{width:200px}
+@media (min-width:768px){.menu-toggle{display:none}
+.contact-information{background-color:#363030;color:#fff;text-align:center;padding:2px 0}
 .contact-information-inner,.site-footer-inner{max-width:900px;margin:0 auto}
 .contact-information-element{display:inline-block}
 .phone-number{float:left}
-.hours{float:right}}
-@media (min-width:992px) and (max-width:1199px){.menu-toggle{display:none}}
+.hours{float:right}
+.navbar{max-width:600px;display:inline-block;left:47px}}
+@media (min-width:992px) and (max-width:1199px){.site-header{max-width:818px}}
 @media (min-width:1200px){.menu-toggle{display:none}
 .page{width:auto;margin:0 auto}
-.site{margin:0 auto}
-.site-header{max-width:900px;margin:0 auto}
+.site-header{max-width:900px}
 .site-footer{background:#ababab;color:#363030;height:30px}
 .navbar{max-width:600px;display:inline-block;left:47px}}
-@media (max-width:767px){.contact-information{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
+@media (max-width:767px){.site-header{text-align:center}
+.contact-information{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
+.main-navigation{z-index:2;position:absolute}
+.navbar{top:-51px;left:28px}
 .toggled-on .menu-toggle:after{vertical-align:2px}
 .toggled-on .nav-menu,.toggled-on .nav-menu>ul{display:block;margin-left:0;padding:0;width:100%}
 .toggled-on .children,.toggled-on li{display:block}
@@ -1458,5 +1464,8 @@ div.nav-menu>ul,ul.nav-menu{margin:0}
 .toggled-on .nav-menu .children a,.toggled-on .nav-menu li:hover>a{background-color:transparent;color:#141412}
 .toggled-on .nav-menu>li a:hover,.toggled-on .nav-menu>ul a:hover{background-color:#db572f;color:#fff}
 .toggled-on .nav-menu>li a:focus,.toggled-on .nav-menu>ul a:focus{background-color:#220e10;color:#fff}
-div.nav-menu>ul,ul.nav-menu{display:none}}
-@media (min-width:768px) and (max-width:991px){.menu-toggle{display:none}}
+div.nav-menu>ul,ul.nav-menu{display:none}
+.hamburger-menu{display:block;width:25px;height:4px;margin:5px 0;background:#000}}
+@media (min-width:768px) and (max-width:991px){.menu-toggle{display:none}
+.site{margin:0 auto}
+.navbar{max-width:600px;left:0}}
